[gd_scene load_steps=2 format=3 uid="uid://e5yk0v7k1q0y6"]

[ext_resource type="Script" path="res://scripts/memory_puzzle.gd" id="1_puzzle"]

[node name="MemoryPuzzle" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_puzzle")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0392157, 0.0392157, 0.0784314, 1)

[node name="ParticleEffect" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TitleLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 0.1
offset_top = 30.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.658824, 0.333333, 0.968627, 1)
theme_override_font_sizes/font_size = 42
text = "기억 감정"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SubtitleLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.1
anchor_right = 1.0
anchor_bottom = 0.15
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.6, 0.6, 0.7, 1)
theme_override_font_sizes/font_size = 24
text = "기억 파편을 올바른 위치에 배치하세요"
horizontal_alignment = 1

[node name="PuzzleArea" type="Control" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.15
anchor_top = 0.2
anchor_right = 0.85
anchor_bottom = 0.85
grow_horizontal = 2
grow_vertical = 2

[node name="MemoryOrb" type="ColorRect" parent="PuzzleArea"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -200.0
offset_right = 200.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.4, 0.3, 0.6, 0.3)

[node name="OrbGlow" type="ColorRect" parent="PuzzleArea/MemoryOrb"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.658824, 0.333333, 0.968627, 0.2)

[node name="SlotContainer" type="Control" parent="PuzzleArea"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -180.0
offset_top = -180.0
offset_right = 180.0
offset_bottom = 180.0
grow_horizontal = 2
grow_vertical = 2

[node name="Slot1" type="Panel" parent="PuzzleArea/SlotContainer"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.1
anchor_top = 0.1
anchor_right = 0.45
anchor_bottom = 0.45
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="PuzzleArea/SlotContainer/Slot1"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.5, 0.5, 0.6, 1)
theme_override_font_sizes/font_size = 16
text = "1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Slot2" type="Panel" parent="PuzzleArea/SlotContainer"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.55
anchor_top = 0.1
anchor_right = 0.9
anchor_bottom = 0.45
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="PuzzleArea/SlotContainer/Slot2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.5, 0.5, 0.6, 1)
theme_override_font_sizes/font_size = 16
text = "2"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Slot3" type="Panel" parent="PuzzleArea/SlotContainer"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.1
anchor_top = 0.55
anchor_right = 0.45
anchor_bottom = 0.9
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="PuzzleArea/SlotContainer/Slot3"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.5, 0.5, 0.6, 1)
theme_override_font_sizes/font_size = 16
text = "3"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Slot4" type="Panel" parent="PuzzleArea/SlotContainer"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.55
anchor_top = 0.55
anchor_right = 0.9
anchor_bottom = 0.9
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="PuzzleArea/SlotContainer/Slot4"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.5, 0.5, 0.6, 1)
theme_override_font_sizes/font_size = 16
text = "4"
horizontal_alignment = 1
vertical_alignment = 1

[node name="FragmentContainer" type="Control" parent="PuzzleArea"]
layout_mode = 1
anchors_preset = -1
anchor_left = -0.3
anchor_right = 1.3
anchor_bottom = 0.2
grow_horizontal = 2
grow_vertical = 2

[node name="ProgressBar" type="ProgressBar" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.3
anchor_top = 0.9
anchor_right = 0.7
anchor_bottom = 0.93
grow_horizontal = 2
grow_vertical = 2
value = 0.0
show_percentage = false

[node name="ProgressLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.3
anchor_top = 0.93
anchor_right = 0.7
anchor_bottom = 0.98
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.7, 0.7, 0.8, 1)
theme_override_font_sizes/font_size = 20
text = "감정 진행도: 0%"
horizontal_alignment = 1

[node name="HintLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.1
anchor_top = 0.85
anchor_right = 0.9
anchor_bottom = 0.9
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.5, 0.6, 0.7, 1)
theme_override_font_sizes/font_size = 18
text = "파편을 드래그하여 빈 슬롯에 배치하세요"
horizontal_alignment = 1
